# OperatingSystemLabs

Lab1_creating_streams/: Lab1.cpp  README.md
Lab2/: CMakeLists.txt  Lab2.cpp
Lab3/: CMakeLists.txt  Lab3.cpp  MultiThreads.hpp  Runner.hpp
Lab3/tests/: CMakeLists.txt  TestsLab3.cpp
Lab4/: browser.cpp  downloader.cpp  input.txt
Lab5/: Browser.cpp  Common.h  Worker.cpp
kolok1/: theory.txt
kolok1/task1/: CMakeLists.txt  Fact.hpp  Task1.cpp
kolok1/task1/test/: CMakeLists.txt  test.cpp
kolok1/task2/: CMakeLists.txt  Main.cpp  MakeSet.hpp
kolok1/task2/Test/: CMakeLists.txt  test.cpp
kolok1/task3/: CMakeLists.txt  ListReverse.hpp  Main.cpp
kolok1/task3/Test/: CMakeLists.txt  test.cpp
kolok2/: CRUD.h  data.h  db.h  logger.h  main.cpp  metrics.h
